--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "simple-icons": "^16.0.0",
     "three": "^0.181.2"
   },
   "devDependencies": {
