--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# documentation
-DEPLOYMENT.md
+# deployment configuration (contains secrets)
+docker-compose.production.yml
+clickhouse/
