Refactor legal notice and privacy policy pages for clarity and compliance
- Renamed ImpressumPage to LegalNoticePage and updated headings and content to reflect legal notice requirements.
- Updated contact information and added a section for responsible content.
- Renamed DatenschutzPage to PrivacyPolicyPage and translated content to English, ensuring GDPR compliance.
- Updated footer links to point to the new legal notice and privacy policy pages.
- Adjusted Docker configuration for improved security and clarity.
- Added README files for both legal notice and privacy policy pages, outlining requirements and implementation details.

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,12 @@ next-env.d.ts
 # deployment configuration (contains secrets)
 docker-compose.production.yml
 clickhouse/
+
+# deployment and setup documentation
+DEPLOYMENT.md
+PORTFOLIO_README.md
+SETUP_GUIDE.md
+
+# legal pages (contain personal information)
+app/privacy-policy/page.tsx
+app/legal-notice/page.tsx
