--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 !.yarn/releases
 !.yarn/versions
 
+# lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
 # testing
 /coverage
 
@@ -52,3 +57,7 @@ SETUP_GUIDE.md
 # legal pages (contain personal information)
 app/privacy-policy/page.tsx
 app/legal-notice/page.tsx
+
+# test and development files
+test-theme.html
+start.sh
