--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.1",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/three": "^0.181.0",
     "lenis": "^1.3.15",
     "next": "16.0.5",
@@ -27,11 +28,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5"
   }
 }
