--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-three/fiber": "^9.4.1",
     "@types/three": "^0.181.0",
     "lenis": "^1.3.15",
-    "next": "16.0.5",
+    "next": "^16.1.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "simple-icons": "^16.0.0",
@@ -28,6 +28,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
     "postcss": "^8.5.6",
