--- a/docker-compose.production.yml.example
+++ b/docker-compose.production.yml.example
@@ -1,20 +1,14 @@
-# Docker Compose Configuration for Production Deployment
-# ⚠️ IMPORTANT: Copy this to your server and configure secrets!
-# This file is git-ignored for security reasons.
-
 services:
-  # PostgreSQL Database for Plausible
   plausible_db:
     image: postgres:16-alpine
     restart: always
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     networks:
       - internal
 
-  # ClickHouse Database for Plausible Events
   plausible_events_db:
     image: clickhouse/clickhouse-server:24.3.3.102-alpine
     restart: always
@@ -30,7 +24,6 @@ services:
     networks:
       - internal
 
-  # Plausible Analytics
   plausible:
     image: ghcr.io/plausible/community-edition:v2.1.1
     restart: always
@@ -41,21 +34,16 @@ services:
     ports:
       - "127.0.0.1:8000:8000"
     environment:
-      # CHANGE THIS: Generate with: openssl rand -base64 48
-      - SECRET_KEY_BASE=CHANGEME_GENERATE_A_RANDOM_64_CHAR_STRING
-      # CHANGE THIS: Generate with: openssl rand -hex 32
-      - TOTP_VAULT_KEY=CHANGEME_GENERATE_A_RANDOM_64_HEX_STRING
-      - BASE_URL=https://analytics.yourdomain.com
-      - DATABASE_URL=postgres://postgres:postgres@plausible_db:5432/plausible_db
-      - CLICKHOUSE_DATABASE_URL=http://plausible_events_db:8123/plausible_events_db
+      - SECRET_KEY_BASE=${SECRET_KEY_BASE}
+      - TOTP_VAULT_KEY=${TOTP_VAULT_KEY}
+      - BASE_URL=${BASE_URL}
+      - DATABASE_URL=postgres://postgres:${POSTGRES_PASSWORD}@plausible_db:5432/plausible_db
+      - CLICKHOUSE_DATABASE_URL=${CLICKHOUSE_DATABASE_URL}
     networks:
       - internal
 
-  # Portfolio Next.js Application
   portfolio:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     restart: always
     ports:
       - "127.0.0.1:3000:3000"
@@ -63,7 +51,6 @@ services:
       - NODE_ENV=production
     networks:
       - internal
-    # Health check
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000"]
       interval: 30s
@@ -77,8 +64,5 @@ networks:
 
 volumes:
   db-data:
-    driver: local
   event-data:
-    driver: local
   event-logs:
-    driver: local
